# Korelin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: ast.c  ast.h  kapi.c  kapi.h  kevaluator.c  kevaluator.h  kgc.c  kgc.h  klexer.c  klexer.h  korelin.c  korelin.cpp  korelin.h  kpackage.c  kpackage.h  kparser.c  kparser.h  kric.c  kric.h  krilib.c  krilib.h  kstruct.c  kstruct.h  kvm.c  kvm.h
src/krip/: download.h
src/libs/: kmap.c  kmap.h  kmath.c  kmath.h  knet.c  knet.h  stdlib.c  stdlib.h
src/rungo/: download.c  package.c  package.h  rungo.c  rungo.h
